[gd_scene load_steps=2 format=3 uid="uid://dqwejvn17wjlx"]

[ext_resource type="Script" path="res://scripts/SaveChangesDialog.gd" id="1_6rfq4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6rfq4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -20.0
offset_right = 101.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
offset_right = 202.0
offset_bottom = 69.0
text = "You have unsaved changes!
Would you like to save?"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 73.0
offset_right = 202.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_right = 60.0
offset_bottom = 31.0
text = "Cancel"

[node name="DontSave" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 64.0
offset_right = 154.0
offset_bottom = 31.0
text = "Don't Save"

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 158.0
offset_right = 202.0
offset_bottom = 31.0
text = "Save
"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DontSave" to="." method="_on_dont_save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
